Added form action

--- a/darkmode.css
+++ b/darkmode.css
@@ -4,7 +4,7 @@
   --primary-text-color: #c6c6c6;
   --light-color: #1a2027;
   --secondary-text-color: #aaaaaa;
-  --input-border-color: #b4becd;
+  --input-border-color: #b4becb62;
   --navbar-mobile-color: rgba(0, 0, 0, 0.2);
   --box-shadow-color: rgba(0, 0, 0, 0.8);
   --link-color: #fff;
